# multi-agent-collaborator-test

./: 01.basic_test_classifier.py  02.supervisor_agent.py  03.sequential_agent.py  04.bedrock_inline_agent.py  05.agent_tools.py  06.bedrock_kb.py  07.stock_research.py  08.deep_research.py  README.md  pyproject.toml  requirements.txt
AutoGen_test/: 01.basic_robin_group_chat.py  02.basic_human_in_loop.py  03.swarm_stock_research.py  litellm_config.yaml  readme.md  utils.py
LangMem_test/: 01.prompt_optimizer.py  02.memory_manager.py
