[project]
name = "multi-agent-collaborator-test"
version = "0.1.0"
requires-python = ">=3.12"
description = "some test code"
readme = "README.md"
dependencies = [
    "exa-py>=1.8.9",
    "langchain-aws>=0.2.13",
    "langchain-community>=0.3.18",
    "langmem>=0.0.11",
    "multi-agent-orchestrator[aws]>=0.1.9",
    "python-dotenv>=1.0.1",
]
